docs/api/qiskit/0.19/qiskit.aqua.operators.state_fns.StateFn.mdx
---
title: StateFn (v0.19)
description: API reference for qiskit.aqua.operators.state_fns.StateFn in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.aqua.operators.state_fns.StateFn
---

# StateFn

<Class id="qiskit.aqua.operators.state_fns.StateFn" isDedicatedPage={true} github="https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.7/qiskit/aqua/operators/state_fns/state_fn.py" signature="StateFn(primitive=None, coeff=1.0, is_measurement=False)" modifiers="class">
  A class for representing state functions and measurements.

  State functions are defined to be complex functions over a single binary string (as compared to an operator, which is defined as a function over two binary strings, or a function taking a binary function to another binary function). This function may be called by the eval() method.

  Measurements are defined to be functionals over StateFns, taking them to real values. Generally, this real value is interpreted to represent the probability of some classical state (binary string) being observed from a probabilistic or quantum system represented by a StateFn. This leads to the equivalent definition, which is that a measurement m is a function over binary strings producing StateFns, such that the probability of measuring a given binary string b from a system with StateFn f is equal to the inner product between f and m(b).

  NOTE: State functions here are not restricted to wave functions, as there is no requirement of normalization.

  **Parameters**

  *   **primitive** (`Union`\[`str`, `dict`, [`Result`](qiskit.result.Result "qiskit.result.result.Result"), `list`, `ndarray`, [`Statevector`](qiskit.quantum_info.Statevector "qiskit.quantum_info.states.statevector.Statevector"), [`QuantumCircuit`](qiskit.circuit.QuantumCircuit "qiskit.circuit.quantumcircuit.QuantumCircuit"), [`Instruction`](qiskit.circuit.Instruction "qiskit.circuit.instruction.Instruction"), [`OperatorBase`](qiskit.aqua.operators.OperatorBase "qiskit.aqua.operators.operator_base.OperatorBase"), `None`]) – The primitive which defines the behavior of the underlying State function.
  *   **coeff** (`Union`\[`int`, `float`, `complex`, [`ParameterExpression`](qiskit.circuit.ParameterExpression "qiskit.circuit.parameterexpression.ParameterExpression")]) – A coefficient by which the state function is multiplied.
  *   **is\_measurement** (`bool`) – Whether the StateFn is a measurement operator

  ## Attributes

  <span id="statefn-coeff" />

  ### coeff

  <Attribute id="qiskit.aqua.operators.state_fns.StateFn.coeff" attributeTypeHint="Union[int, float, complex, qiskit.circuit.parameterexpression.ParameterExpression]">
    A coefficient by which the state function is multiplied.

    **Return type**

    `Union`\[`int`, `float`, `complex`, [`ParameterExpression`](qiskit.circuit.ParameterExpression "qiskit.circuit.parameterexpression.ParameterExpression")]
  </Attribute>

  <span id="statefn-is-measurement" />

  ### is\_measurement

  <Attribute id="qiskit.aqua.operators.state_fns.StateFn.is_measurement" attributeTypeHint="bool">
    Whether the StateFn object is a measurement Operator.

    **Return type**

    `bool`
  </Attribute>

  <span id="statefn-num-qubits" />

  ### num\_qubits

  <Attribute id="qiskit.aqua.operators.state_fns.StateFn.num_qubits" attributeTypeHint="int">
    The number of qubits over which the Operator is defined. If `op.num_qubits == 5`, then `op.eval('1' * 5)` will be valid, but `op.eval('11')` will not.

    **Return type**

    `int`

    **Returns**

    The number of qubits accepted by the Operator’s underlying function.
  </Attribute>

  <span id="statefn-primitive" />

  ### primitive

  <Attribute id="qiskit.aqua.operators.state_fns.StateFn.primitive">
    The primitive which defines the behavior of the underlying State function.
  </Attribute>

  ## Methods

  <span id="statefn-mul" />

  ### \_\_mul\_\_

  <Function id="qiskit.aqua.operators.state_fns.StateFn.__mul__" signature="StateFn.__mul__(other)">
    Overload `*` for Operator scalar multiplication.

    **Parameters**

    **other** (`Number`) – The real or complex scalar by which to multiply the Operator, or the `ParameterExpression` to serve as a placeholder for a scalar factor.

    **Return type**

    [`OperatorBase`](qiskit.aqua.operators.OperatorBase "qiskit.aqua.operators.operator_base.OperatorBase")

    **Returns**

    An `OperatorBase` equivalent to product of self and scalar.
  </Function>

  <span id="statefn-add" />

  ### add

  <Function id="qiskit.aqua.operators.state_fns.StateFn.add" signature="StateFn.add(other)">
    Return Operator addition of self and other, overloaded by `+`.

    **Parameters**

    **other** ([`OperatorBase`](qiskit.aqua.operators.OperatorBase "qiskit.aqua.operators.operator_base.OperatorBase")) – An `OperatorBase` with the same number of qubits as self, and in the same ‘Operator’, ‘State function’, or ‘Measurement’ category as self (i.e. the same type of underlying function).

    **Return type**

    [`OperatorBase`](qiskit.aqua.operators.OperatorBase "qiskit.aqua.operators.operator_base.OperatorBase")

    **Returns**

    An `OperatorBase` equivalent to the sum of self and other.
  </Function>

  <span id="statefn-adjoint" />

  ### adjoint

  <Function id="qiskit.aqua.operators.state_fns.StateFn.adjoint" signature="StateFn.adjoint()">
    Return a new Operator equal to the Operator’s adjoint (conjugate transpose), overloaded by `~`. For StateFns, this also turns the StateFn into a measurement.

    **Return type**

    [`OperatorBase`](qiskit.aqua.operators.OperatorBase "qiskit.aqua.operators.operator_base.OperatorBase")

    **Returns**

    An `OperatorBase` equivalent to the adjoint of self.
  </Function>

  <span id="statefn-assign-parameters" />

  ### assign\_parameters

  <Function id="qiskit.aqua.operators.state_fns.StateFn.assign_parameters" signature="StateFn.assign_parameters(param_dict)">
    Binds scalar values to any Terra `Parameters` in the coefficients or primitives of the Operator, or substitutes one `Parameter` for another. This method differs from Terra’s `assign_parameters` in that it also supports lists of values to assign for a give `Parameter`, in which case self will be copied for each parameterization in the binding list(s), and all the copies will be returned in an `OpList`. If lists of parameterizations are used, every `Parameter` in the param\_dict must have the same length list of parameterizations.

    **Parameters**

    **param\_dict** (`dict`) – The dictionary of `Parameters` to replace, and values or lists of values by which to replace them.

    **Return type**

    [`OperatorBase`](qiskit.aqua.operators.OperatorBase "qiskit.aqua.operators.operator_base.OperatorBase")

    **Returns**

    The `OperatorBase` with the `Parameters` in self replaced by the values or `Parameters` in param\_dict. If param\_dict contains parameterization lists, this `OperatorBase` is an `OpList`.
  </Function>

  <span id="statefn-bind-parameters" />

  ### bind\_parameters

  <Function id="qiskit.aqua.operators.state_fns.StateFn.bind_parameters" signature="StateFn.bind_parameters(param_dict)">
    Same as assign\_parameters, but maintained for consistency with QuantumCircuit in Terra (which has both assign\_parameters and bind\_parameters).

    **Return type**

    [`OperatorBase`](qiskit.aqua.operators.OperatorBase "qiskit.aqua.operators.operator_base.OperatorBase")
  </Function>

  <span id="statefn-compose" />

  ### compose

  <Function id="qiskit.aqua.operators.state_fns.StateFn.compose" signature="StateFn.compose(other)">
    Composition (Linear algebra-style: A\@B(x) = A(B(x))) is not well defined for states in the binary function model, but is well defined for measurements.

    **Parameters**

    **other** ([`OperatorBase`](qiskit.aqua.operators.OperatorBase "qiskit.aqua.operators.operator_base.OperatorBase")) – The Operator to compose with self.

    **Return type**

    [`OperatorBase`](qiskit.aqua.operators.OperatorBase "qiskit.aqua.operators.operator_base.OperatorBase")

    **Returns**

    An Operator equivalent to the function composition of self and other.

    **Raises**

    **ValueError** – If self is not a measurement, it cannot be composed from the right.
  </Function>

  <span id="statefn-equals" />

  ### equals

  <Function id="qiskit.aqua.operators.state_fns.StateFn.equals" signature="StateFn.equals(other)">
    Evaluate Equality between Operators, overloaded by `==`. Only returns True if self and other are of the same representation (e.g. a DictStateFn and CircuitStateFn will never be equal, even if their vector representations are equal), their underlying primitives are equal (this means for ListOps, OperatorStateFns, or EvolvedOps the equality is evaluated recursively downwards), and their coefficients are equal.

    **Parameters**

    **other** ([`OperatorBase`](qiskit.aqua.operators.OperatorBase "qiskit.aqua.operators.operator_base.OperatorBase")) – The `OperatorBase` to compare to self.

    **Return type**

    `bool`

    **Returns**

    A bool equal to the equality of self and other.
  </Function>

  <span id="statefn-eval" />

  ### eval

  <Function id="qiskit.aqua.operators.state_fns.StateFn.eval" signature="StateFn.eval(front=None)">
    Evaluate the Operator’s underlying function, either on a binary string or another Operator. A square binary Operator can be defined as a function taking a binary function to another binary function. This method returns the value of that function for a given StateFn or binary string. For example, `op.eval('0110').eval('1110')` can be seen as querying the Operator’s matrix representation by row 6 and column 14, and will return the complex value at those “indices.” Similarly for a StateFn, `op.eval('1011')` will return the complex value at row 11 of the vector representation of the StateFn, as all StateFns are defined to be evaluated from Zero implicitly (i.e. it is as if `.eval('0000')` is already called implicitly to always “indexing” from column 0).

    **Parameters**

    **front** (`Union`\[`str`, `dict`, `ndarray`, [`OperatorBase`](qiskit.aqua.operators.OperatorBase "qiskit.aqua.operators.operator_base.OperatorBase"), `None`]) – The bitstring, dict of bitstrings (with values being coefficients), or StateFn to evaluated by the Operator’s underlying function.

    **Return type**

    `Union`\[[`OperatorBase`](qiskit.aqua.operators.OperatorBase "qiskit.aqua.operators.operator_base.OperatorBase"), `float`, `complex`]

    **Returns**

    The output of the Operator’s evaluation function. If self is a `StateFn`, the result is a float or complex. If self is an Operator (`PrimitiveOp, ComposedOp, SummedOp, EvolvedOp,` etc.), the result is a StateFn. If either self or front contain proper `ListOps` (not ListOp subclasses), the result is an n-dimensional list of complex or StateFn results, resulting from the recursive evaluation by each OperatorBase in the ListOps.
  </Function>

  <span id="statefn-mul" />

  ### mul

  <Function id="qiskit.aqua.operators.state_fns.StateFn.mul" signature="StateFn.mul(scalar)">
    Returns the scalar multiplication of the Operator, overloaded by `*`, including support for Terra’s `Parameters`, which can be bound to values later (via `bind_parameters`).

    **Parameters**

    **scalar** (`Union`\[`int`, `float`, `complex`, [`ParameterExpression`](qiskit.circuit.ParameterExpression "qiskit.circuit.parameterexpression.ParameterExpression")]) – The real or complex scalar by which to multiply the Operator, or the `ParameterExpression` to serve as a placeholder for a scalar factor.

    **Return type**

    [`OperatorBase`](qiskit.aqua.operators.OperatorBase "qiskit.aqua.operators.operator_base.OperatorBase")

    **Returns**

    An `OperatorBase` equivalent to product of self and scalar.
  </Function>

  <span id="statefn-neg" />

  ### neg

  <Function id="qiskit.aqua.operators.state_fns.StateFn.neg" signature="StateFn.neg()">
    Return the Operator’s negation, effectively just multiplying by -1.0, overloaded by `-`.

    **Return type**

    [`OperatorBase`](qiskit.aqua.operators.OperatorBase "qiskit.aqua.operators.operator_base.OperatorBase")

    **Returns**

    An `OperatorBase` equivalent to the negation of self.
  </Function>

  <span id="statefn-power" />

  ### power

  <Function id="qiskit.aqua.operators.state_fns.StateFn.power" signature="StateFn.power(exponent)">
    Compose with Self Multiple Times, undefined for StateFns.

    **Parameters**

    **exponent** (`int`) – The number of times to compose self with self.

    **Raises**

    **ValueError** – This function is not defined for StateFns.

    **Return type**

    [`OperatorBase`](qiskit.aqua.operators.OperatorBase "qiskit.aqua.operators.operator_base.OperatorBase")
  </Function>

  <span id="statefn-primitive-strings" />

  ### primitive\_strings

  <Function id="qiskit.aqua.operators.state_fns.StateFn.primitive_strings" signature="StateFn.primitive_strings()">
    Return a set of strings describing the primitives contained in the Operator. For example, `{'QuantumCircuit', 'Pauli'}`. For hierarchical Operators, such as `ListOps`, this can help illuminate the primitives represented in the various recursive levels, and therefore which conversions can be applied.

    **Return type**

    `Set`\[`str`]

    **Returns**

    A set of strings describing the primitives contained within the Operator.
  </Function>

  <span id="statefn-reduce" />

  ### reduce

  <Function id="qiskit.aqua.operators.state_fns.StateFn.reduce" signature="StateFn.reduce()">
    Try collapsing the Operator structure, usually after some type of conversion, e.g. trying to add Operators in a SummedOp or delete needless IGates in a CircuitOp. If no reduction is available, just returns self.

    **Return type**

    [`OperatorBase`](qiskit.aqua.operators.OperatorBase "qiskit.aqua.operators.operator_base.OperatorBase")

    **Returns**

    The reduced `OperatorBase`.
  </Function>

  <span id="statefn-sample" />

  ### sample

  <Function id="qiskit.aqua.operators.state_fns.StateFn.sample" signature="StateFn.sample(shots=1024, massive=False, reverse_endianness=False)">
    Sample the state function as a normalized probability distribution. Returns dict of bitstrings in order of probability, with values being probability.

    **Parameters**

    *   **shots** (`int`) – The number of samples to take to approximate the State function.
    *   **massive** (`bool`) – Whether to allow large conversions, e.g. creating a matrix representing over 16 qubits.
    *   **reverse\_endianness** (`bool`) – Whether to reverse the endianness of the bitstrings in the return dict to match Terra’s big-endianness.

    **Return type**

    `Dict`\[`str`, `Union`\[`int`, `float`]]

    **Returns**

    A dict containing pairs sampled strings from the State function and sampling frequency divided by shots.
  </Function>

  <span id="statefn-tensor" />

  ### tensor

  <Function id="qiskit.aqua.operators.state_fns.StateFn.tensor" signature="StateFn.tensor(other)">
    Return tensor product between self and other, overloaded by `^`. Note: You must be conscious of Qiskit’s big-endian bit printing convention. Meaning, Plus.tensor(Zero) produces a |+⟩ on qubit 0 and a |0⟩ on qubit 1, or |+⟩⨂|0⟩, but would produce a QuantumCircuit like

    > |0⟩– |+⟩–

    Because Terra prints circuits and results with qubit 0 at the end of the string or circuit.

    **Parameters**

    **other** ([`OperatorBase`](qiskit.aqua.operators.OperatorBase "qiskit.aqua.operators.operator_base.OperatorBase")) – The `OperatorBase` to tensor product with self.

    **Return type**

    [`OperatorBase`](qiskit.aqua.operators.OperatorBase "qiskit.aqua.operators.operator_base.OperatorBase")

    **Returns**

    An `OperatorBase` equivalent to the tensor product of self and other.
  </Function>

  <span id="statefn-tensorpower" />

  ### tensorpower

  <Function id="qiskit.aqua.operators.state_fns.StateFn.tensorpower" signature="StateFn.tensorpower(other)">
    Return tensor product with self multiple times, overloaded by `^`.

    **Parameters**

    **other** (`int`) – The int number of times to tensor product self with itself via `tensorpower`.

    **Return type**

    `Union`\[[`OperatorBase`](qiskit.aqua.operators.OperatorBase "qiskit.aqua.operators.operator_base.OperatorBase"), `int`]

    **Returns**

    An `OperatorBase` equivalent to the tensorpower of self by other.
  </Function>

  <span id="statefn-to-density-matrix" />

  ### to\_density\_matrix

  <Function id="qiskit.aqua.operators.state_fns.StateFn.to_density_matrix" signature="StateFn.to_density_matrix(massive=False)">
    Return matrix representing product of StateFn evaluated on pairs of basis states. Overridden by child classes.

    **Parameters**

    **massive** (`bool`) – Whether to allow large conversions, e.g. creating a matrix representing over 16 qubits.

    **Return type**

    `ndarray`

    **Returns**

    The NumPy array representing the density matrix of the State function.

    **Raises**

    **ValueError** – If massive is set to False, and exponentially large computation is needed.
  </Function>

  <span id="statefn-to-legacy-op" />

  ### to\_legacy\_op

  <Function id="qiskit.aqua.operators.state_fns.StateFn.to_legacy_op" signature="StateFn.to_legacy_op(massive=False)">
    Attempt to return the Legacy Operator representation of the Operator. If self is a `SummedOp` of `PauliOps`, will attempt to convert to `WeightedPauliOperator`, and otherwise will simply convert to `MatrixOp` and then to `MatrixOperator`. The Legacy Operators cannot represent `StateFns` or proper `ListOps` (meaning not one of the `ListOp` subclasses), so an error will be thrown if this method is called on such an Operator. Also, Legacy Operators cannot represent unbound Parameter coeffs, so an error will be thrown if any are present in self.

    Warn if more than 16 qubits to force having to set `massive=True` if such a large vector is desired.

    **Return type**

    [`LegacyBaseOperator`](qiskit.aqua.operators.legacy.LegacyBaseOperator "qiskit.aqua.operators.legacy.base_operator.LegacyBaseOperator")

    **Returns**

    The `LegacyBaseOperator` representing this Operator.

    **Raises**

    **TypeError** – self is an Operator which cannot be represented by a `LegacyBaseOperator`, such as `StateFn`, proper (non-subclass) `ListOp`, or an Operator with an unbound coeff Parameter.
  </Function>

  <span id="statefn-to-matrix" />

  ### to\_matrix

  <Function id="qiskit.aqua.operators.state_fns.StateFn.to_matrix" signature="StateFn.to_matrix(massive=False)">
    Return NumPy representation of the Operator. Represents the evaluation of the Operator’s underlying function on every combination of basis binary strings. Warn if more than 16 qubits to force having to set `massive=True` if such a large vector is desired.

    **Return type**

    `ndarray`

    **Returns**

    The NumPy `ndarray` equivalent to this Operator.
  </Function>

  <span id="statefn-to-matrix-op" />

  ### to\_matrix\_op

  <Function id="qiskit.aqua.operators.state_fns.StateFn.to_matrix_op" signature="StateFn.to_matrix_op(massive=False)">
    Return a `VectorStateFn` for this `StateFn`.

    **Parameters**

    **massive** (`bool`) – Whether to allow large conversions, e.g. creating a matrix representing over 16 qubits.

    **Return type**

    [`OperatorBase`](qiskit.aqua.operators.OperatorBase "qiskit.aqua.operators.operator_base.OperatorBase")

    **Returns**

    A VectorStateFn equivalent to self.
  </Function>

  <span id="statefn-traverse" />

  ### traverse

  <Function id="qiskit.aqua.operators.state_fns.StateFn.traverse" signature="StateFn.traverse(convert_fn, coeff=None)">
    Apply the convert\_fn to the internal primitive if the primitive is an Operator (as in the case of `OperatorStateFn`). Otherwise do nothing. Used by converters.

    **Parameters**

    *   **convert\_fn** (`Callable`) – The function to apply to the internal OperatorBase.
    *   **coeff** (`Union`\[`int`, `float`, `complex`, [`ParameterExpression`](qiskit.circuit.ParameterExpression "qiskit.circuit.parameterexpression.ParameterExpression"), `None`]) – A coefficient to multiply by after applying convert\_fn.

    **Return type**

    [`OperatorBase`](qiskit.aqua.operators.OperatorBase "qiskit.aqua.operators.operator_base.OperatorBase")

    **Returns**

    The converted StateFn.
  </Function>
</Class>

